# Radon

./: .clang-format  .gitignore  CMakeLists.txt  Cache.json  Project.json  README.md  ROADMAP_MVP.md  RadonMain.cpp  conan_provider.cmake  conandata.yml  ui.ini
CMake/: CopyAssets.cmake  CopyData.cmake  RemoveLog.cmake
Cache/Assets/Fox.glb.d/: Prefab.prefab
Cache/Assets/Fox.glb.d/Animations/: Run.ani  Run.xml  Run_IK_Only.ani  Run_IK_Only.xml  Survey.ani  Survey.xml  Survey_IK_Only.ani  Survey_IK_Only.xml  Walk.ani  Walk.xml  Walk_IK_Only.ani  Walk_IK_Only.xml
Cache/Assets/Fox.glb.d/Materials/: fox_material_Lit.xml
Cache/Assets/Fox.glb.d/Models/: fox1.mdl
Data/: EngineParameters.json
Data/Items/: Bandage.json  EnergyDrink.json  KevlarVest.json  MedKit.json  medkit.json
Data/Materials/: Floor.xml  Metal.xml  Wood.xml
Data/Scenes/: Default.scene  Default.scene.user.json  Gameplay.scene  Gameplay.scene.user.json  Gameplay.xml  MainMenu.scene  MainMenu.scene.user.json
Data/UI/: GameplayHUD.rcss  GameplayHUD.rml  MainMenu.rcss  MainMenu.rml
Data/VectorBuffer.d/Textures/: ReflectionProbe-38.xml
Game/: CMakeLists.txt  Main.cpp
Game/App/: GameApplication.cpp  GameApplication.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp
Game/App/Graphics/: ViewportManager.cpp  ViewportManager.hpp
Game/App/Scene/: MenuSceneAnimator.cpp  MenuSceneAnimator.hpp  SceneBuilder.cpp  SceneBuilder.hpp
Game/App/States/: GameState.hpp  GameStateManager.hpp  GameplayState.cpp  GameplayState.hpp  MenuState.cpp  MenuState.hpp
Game/App/UI/: HUDBuilder.cpp  HUDBuilder.hpp  MenuBuilder.cpp  MenuBuilder.hpp
Game/Data/: ItemData.hpp  Registry.hpp
Plugins/Player/: CMakeLists.txt  ComponentCategory.hpp  PlayerPlugin.cpp  PlayerPlugin.hpp
Plugins/Player/Components/: PlayerCamera.cpp  PlayerCamera.hpp  PlayerHealth.cpp  PlayerHealth.hpp  PlayerInputHandler.cpp  PlayerInputHandler.hpp  PlayerMovement.cpp  PlayerMovement.hpp
Plugins/Player/Events/: PlayerEvents.cpp  PlayerEvents.hpp
Source/: CMakeLists.txt  Main.cpp
Source/App/: CMakeLists.txt  GameApplication.cpp  GameApplication.hpp  RadonApplication.cpp  RadonApplication.hpp
Source/App/Camera/: CameraController.cpp  CameraController.hpp
Source/App/Graphics/: ViewportManager.cpp  ViewportManager.hpp
Source/App/Input/: CameraController.cpp  CameraController.hpp
Source/App/Scene/: SceneManager.cpp  SceneManager.hpp
Source/App/States/: GameStateManager.cpp  GameStateManager.hpp  GameplayState.cpp  GameplayState.hpp  IGameState.hpp  MenuState.cpp  MenuState.hpp
Source/App/UI/: EventListenerGuard.hpp  FontLoader.cpp  FontLoader.hpp  UIManager.cpp  UIManager.hpp
Source/Client/: CMakeLists.txt
Source/Data/: ItemData.hpp  Registry.hpp
Source/Engine/: CMakeLists.txt  CrashHandler.cpp  RadonApp.cpp  RadonApp.hpp
Source/Engine/Config/: ConfigManager.cpp  ConfigManager.hpp
Source/Engine/Core/: Logger.hpp
Source/Engine/Graphics/: CameraEffectsManager.cpp  CameraEffectsManager.hpp  CameraEffectsService.cpp  CameraEffectsService.hpp  CameraEvents.cpp  CameraEvents.hpp  ICameraEffect.hpp  ViewportManager.cpp  ViewportManager.hpp
Source/Engine/Graphics/Effects/: CameraShakeEffect.cpp  CameraShakeEffect.hpp  HeadBobEffect.cpp  HeadBobEffect.hpp
Source/Engine/Input/: CameraController.cpp  CameraController.hpp  CameraManager.cpp  CameraManager.hpp  InputHandler.cpp  InputHandler.hpp  PlayerCameraService.cpp  PlayerCameraService.hpp
Source/Engine/Input/CameraController/: BaseCameraController.cpp  BaseCameraController.hpp  CameraController.cpp  CameraController.hpp  FPSCameraController.cpp  FPSCameraController.hpp  FreeCameraController.cpp  FreeCameraController.hpp  ICameraController.hpp
Source/Engine/Input/CameraMode/: BaseCameraController.cpp  BaseCameraController.hpp  FPSCameraController.hpp  FreeCameraController.hpp  ICamera.hpp
Source/Engine/Scene/: SceneManager.cpp  SceneManager.hpp
Source/Engine/StateMachine/: AppStateManager.cpp  AppStateManager.hpp  GameStateManager.cpp  GameStateManager.hpp  IGameState.hpp
Source/Engine/UI/: DebugHUD.cpp  DebugHUD.hpp  EventListenerGuard.hpp  FontLoader.cpp  FontLoader.hpp  UIManager.cpp  UIManager.hpp
Source/Game/: CMakeLists.txt
Source/Game/Components/: RegisterComponents.cpp  RegisterComponents.hpp
Source/Game/Components/Events/: GlobalVars.hpp  PlayerEvents.cpp  PlayerEvents.hpp
Source/Game/Components/Player/: PlayerCameraBinding.cpp  PlayerCameraBinding.hpp  PlayerComponent.cpp  PlayerComponent.hpp  PlayerHealth.cpp  PlayerHealth.hpp  PlayerInputHandler.cpp  PlayerInputHandler.hpp  PlayerMovement.cpp  PlayerMovement.hpp
Source/Game/Data/: ItemData.hpp  Registry.hpp
Source/Game/Player/: ComponentCategory.hpp  PlayerManager.cpp  PlayerManager.hpp
Source/Game/Player/Components/: PlayerCamera.cpp  PlayerCamera.hpp  PlayerHealth.cpp  PlayerHealth.hpp  PlayerInputHandler.cpp  PlayerInputHandler.hpp  PlayerMovement.cpp  PlayerMovement.hpp
Source/Game/Player/Events/: GlobalVars.hpp  PlayerEvents.cpp  PlayerEvents.hpp
Source/Game/States/: GameplayState.cpp  GameplayState.hpp  MenuState.cpp  MenuState.hpp
Source/Server/: CMakeLists.txt  Dummy.cpp
Source/Shared/: CMakeLists.txt
